src/renderer/App.css
@font-face {
  font-family: Simsowo;
  src: url('/assets/fonts/Loucos Lyne - thesimssansbold.otf');
}

@font-face {
  font-family: Simsowo2;
  src: url('/assets/fonts/Loucos Lyne - thesimssansboldsc.otf');
}

body {
  height: 100vh;

  overflow-x: hidden;
  overflow-y: hidden;
  margin: 0;
}

.turn-image-thumbnail-list {
  display: flex;
  max-width: calc(80vw);
  overflow-x: auto;
  overflow-y: hidden;
  margin: 5px 5px 0 5px;
  bottom: 0;
  object-fit: contain;
  z-index: 99;
}

.turn-image-thumbnail {
  position: block;
  margin: 0 10px 0 0;
  z-index: -1;
  width: 120px;
}

.turn-image-thumbnail-container {
  z-index: -1;
}

.thumbnail-drag-overlay {
  position: relative;
  margin-right: 8px;
  width: 120px;
}

.single-thumbnail:hover {
  background-size: cover;
  opacity: 0.4;
}

.turn-image-description-scrollbar {
  min-width: 100%;
  min-height: 100%;
  overflow-y: visible;
  overflow-x: none;

  align-items: center;
  justify-content: center;
}

.turn-image-description-content .ql-editor {
  font-family: Simsowo;
  /* color: #1452ae; */

  font-size: min(2.75vh, 2.75vw);
  text-align: justify;
  text-justify: inter-word;

  overflow: hidden;

  line-height: 1.2;
  padding: 0 1rem 0 0;
}

.turn-image-description-content .ql-editor p {
  padding-top: 1rem;
}

.turn-image-description-content .ql-editor p:first-child {
  padding-top: 0px;
}

.settings-icon {
  width: 2em;
  position: relative;
}

.loader {
  width: 50px;
  aspect-ratio: 1;
  border-radius: 50%;
  border: 8px solid lightblue;
  /* border-right-color: orange; */
  animation: l2 1s infinite linear;
}
@keyframes l2 {to{transform: rotate(1turn)}}

.ql-snow {
  border: none !important;
}

::-webkit-scrollbar {
  width: 20px;
}

::-webkit-scrollbar-track {
  box-shadow: inset 0 0 2px grey;
  border-radius: 10px;
  background: #e4e4e4;
}

::-webkit-scrollbar-thumb {
  background: #eff3f7;
  border: 2px solid rgba(0, 0, 0, 0.2);
  border-radius: 10px;
  min-height: 60px;
}

::-webkit-scrollbar-corner {
  background: #eff3f7;
}

